# wi-pro-esp32-ftm

./: .gitignore  README.md  build.sh  build_controller.sh  build_firmware.sh  flash.sh
controller/: Cargo.toml
controller/src/: config.rs  esp_io.rs  ipc_publisher.rs  lib.rs  srv.rs  tlv.rs  tui.rs
firmware/: Cargo.toml  build.rs  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/patch/: 0001-fix-wifi-Expose-Rx-pkt-timstamp-related-calculations.patch
firmware/src/: bindings.h  config.rs  console.rs  csi.rs  espnow.rs  ftm.rs  led.rs  main.rs  peers.rs  scan.rs  timectl.rs  wifi.rs  wipro.rs
scripts/: create_idft_mat.py  esp_ranging.py
