[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
chrono = "0.4.43"
clap = "4.5.54"
once_cell = "1.21.3"
tokio = { version = "1.49.0", features = ["full"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio-serial = "5.4.5"
base64 = "0.22.1"
futures = "0.3.31"
get_if_addrs = "0.5.3"
mac_address = "1.1.8"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
log = { version = "0.4.29", features = ["std"] }
uuid = { version = "1.21.0", features = ["v4"] }
zeromq = "0.4.1"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
